# a-tour-of-rust

./: .gitignore  Cargo.toml  README.md
course/best-practices/dependencies/: Cargo.toml  readme.md
course/best-practices/docs/src/: main.rs
course/best-practices/format/: readme.md  rustffmt.toml
course/best-practices/format/src/: main.rs
course/best-practices/license/: Cargo.toml  readme.md
course/bonus/file_adapt/: Cargo.toml
course/bonus/file_adapt/src/: main.rs
course/bonus/read_file/: Cargo.toml
course/bonus/read_file/src/: main.rs
course/fundamentals/auth/: Cargo.toml
course/fundamentals/auth/src/: lib.rs
course/fundamentals/five/collector/: Cargo.toml
course/fundamentals/five/collector/src/: collector.rs  main.rs  sender.rs
course/fundamentals/five/rustamania/: Cargo.toml
course/fundamentals/five/server/: Cargo.toml
course/fundamentals/five/server/src/: handler.rs  listener.rs  main.rs
course/fundamentals/five/server/web/: collector.html
course/fundamentals/five/shared_data/: Cargo.toml
course/fundamentals/five/shared_data/src/: lib.rs
course/fundamentals/login_manager/src/: main.rs
course/fundamentals/module/five/shared_data/: Cargo.toml
course/fundamentals/module/four/packing/: Cargo.toml
course/fundamentals/module/one/auth/: Cargo.toml
course/fundamentals/module/one/login_manager/: Cargo.toml  readme.md
course/fundamentals/module/one/text_input/: main.rs
course/fundamentals/module/three/async_chan/: Cargo.toml
course/fundamentals/module/three/async_pinning/: Cargo.toml
course/fundamentals/module/three/blocking_tasks/: Cargo.toml
course/fundamentals/module/three/db/: .env  Cargo.toml
course/fundamentals/module/three/err_handling/: Cargo.toml
course/fundamentals/module/three/thumbnail_service/: Cargo.toml
course/fundamentals/module/three/tokio_further/: Cargo.toml
course/fundamentals/module/two/lock_free/: Cargo.toml
course/fundamentals/module/two/rw_mutexes_explored/: Cargo.toml
course/fundamentals/module/two/thread_affinity/: Cargo.toml
course/fundamentals/module/two/thread_park/: Cargo.toml
course/fundamentals/module/two/tprio/: Cargo.toml
course/fundamentals/module/two/workqueue/: Cargo.toml
course/fundamentals/module_four/bytes/: Cargo.toml
course/fundamentals/module_four/bytes/src/: main.rs
course/fundamentals/module_four/dropping/: Cargo.toml
course/fundamentals/module_four/dropping/src/: main.rs
course/fundamentals/module_four/generics/src/: main.rs
course/fundamentals/module_four/lifetimes/src/: main.rs
course/fundamentals/module_four/linked_list/src/: main.rs
course/fundamentals/module_four/memory/: Cargo.toml
course/fundamentals/module_four/memory/src/: main.rs
course/fundamentals/module_four/packing/src/: main.rs
course/fundamentals/module_four/raii/src/: main.rs
course/fundamentals/module_four/ref_counting/: Cargo.toml
course/fundamentals/module_four/ref_counting/src/: main.rs
course/fundamentals/module_four/traits/src/: main.rs
course/fundamentals/module_three/async_chan/src/: main.rs
course/fundamentals/module_three/async_pinning/src/: main.rs
course/fundamentals/module_three/file_io/: Cargo.toml
course/fundamentals/module_three/file_io/src/: main.rs
course/fundamentals/module_three/hello_async/src/: main.rs
course/fundamentals/module_three/hello_tokio/: Cargo.toml
course/fundamentals/module_three/network_io/: Cargo.toml
course/fundamentals/module_three/tcpserver/: Cargo.toml
course/fundamentals/module_three/tcpserver/src/: main.rs
course/fundamentals/module_three/thumbnail_service/migrations/: 20250114134431_init.sql
course/fundamentals/module_three/thumbnail_service/src/: index.html  main.rs
course/fundamentals/module_three/tokio_axum/: Cargo.toml
course/fundamentals/module_three/tokio_axum/src/: main.rs
course/fundamentals/module_three/tokio_further/src/: main.rs
course/fundamentals/module_three/tokio_select/: Cargo.toml
course/fundamentals/module_three/tokio_shared_state/: Cargo.toml
course/fundamentals/module_three/tokio_tracing/: Cargo.toml
course/fundamentals/module_three/tokio_tracing/src/: main.rs
course/fundamentals/module_three/tokio_uts/: Cargo.toml
course/fundamentals/module_three/tokio_uts/src/: lib.rs
course/fundamentals/module_two/atomics_explored/: Cargo.toml
course/fundamentals/module_two/deadlock/src/: main.rs
course/fundamentals/module_two/footgun/src/: main.rs
course/fundamentals/module_two/hello_thread/src/: main.rs
course/fundamentals/module_two/mutexes_explored/: Cargo.toml
course/fundamentals/module_two/mutexes_explored/src/: main.rs
course/fundamentals/module_two/rayon_iters/: Cargo.toml
course/fundamentals/module_two/rayon_iters/src/: main.rs
course/fundamentals/module_two/rayon_scopes/: Cargo.toml
course/fundamentals/module_two/scoped_thread/: Cargo.toml
course/fundamentals/module_two/threadpool/: Cargo.toml
course/fundamentals/text_input/: Cargo.toml
course/fundamentals/variables/: Cargo.toml  main.rs
course/raas/cfg_cli/: Cargo.toml
course/raas/cfg_cli/src/: main.rs
course/raas/cfg_server/: Cargo.toml
course/raas/cfg_server/src/: main.rs
course/raas/grpc_server/: Cargo.toml  build.rs  readme.md
course/raas/grpc_server/proto/: hello.proto
course/raas/grpc_server/src/: client.rs  main.rs  server.rs
course/raas/grpc_stream/: Cargo.toml  build.rs
course/raas/grpc_stream/proto/: streaming.proto
course/raas/grpc_stream/src/: client.rs  server.rs
course/raas/http_srv/: .env  Cargo.toml
course/raas/http_srv/src/: main.rs
course/raas/http_srv/web/: index.html
course/raas/websocket_echo/: Cargo.toml
course/raas/websocket_echo/src/: main.rs
course/raas/ws_client/: Cargo.toml
course/raas/ws_client/src/: main.rs
course/raas/ws_json/: Cargo.toml  Dockerfile
course/raas/ws_json/src/: main.rs
exercise/calc_median/: Cargo.toml
exercise/calc_median/src/: lib.rs
exercise/find_duplicates/: Cargo.toml
exercise/find_duplicates/src/: lib.rs
exercise/printable/: Cargo.toml
exercise/printable/src/: lib.rs
(+34 files in other folders)
