[package]
name = "a-tour-of-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "course/fundamentals/auth",
    "course/fundamentals/library",
    "course/fundamentals/login_manager",
    "course/fundamentals/module_two/atomics_explored",
    "course/fundamentals/module_two/channels",
    "course/fundamentals/module_two/deadlock",
    "course/fundamentals/module_two/footgun",
    "course/fundamentals/module_two/hello_thread",
    "course/fundamentals/module_two/lock_free",
    "course/fundamentals/module_two/mutexes_explored",
    "course/fundamentals/module_two/rw_mutexes_explored",
    "course/fundamentals/module_two/scoped_thread",
    "course/fundamentals/module_two/thread_affinity",
    "course/fundamentals/module_two/thread_builder",
    "course/fundamentals/module_two/thread_park",
    "course/fundamentals/module_two/tprio",
    "course/fundamentals/module_two/threadpool",
    "course/fundamentals/module_two/workers",
    "course/fundamentals/module_two/workqueue",
    "course/fundamentals/text_input",
    "course/fundamentals/variables",
    "course/fundamentals/module_two/rayon_iters",
    "course/fundamentals/module_two/rayon_scopes",
    "course/fundamentals/module_three/hello_async",
    "course/fundamentals/module_three/hello_tokio",
    "course/fundamentals/module_three/tokio_further",
    "course/fundamentals/module_three/blocking_tasks",
    "course/fundamentals/module_three/tokio_uts",
    "course/fundamentals/module_three/err_handling",
    "course/fundamentals/module_three/file_io",
    "course/fundamentals/module_three/network_io",
    "course/fundamentals/module_three/tcpserver",
    "course/fundamentals/module_three/async_chan",
    "course/fundamentals/module_three/tokio_shared_state",
    "course/fundamentals/module_three/tokio_select",
    "course/fundamentals/module_three/async_pinning",
    "course/fundamentals/module_three/tokio_tracing",
    "course/fundamentals/module_three/db",
    "course/fundamentals/module_three/tokio_axum",
    "course/fundamentals/module_three/thumbnail_service",
    "course/fundamentals/module_four/memory",
    "course/fundamentals/module_four/dropping",
    "course/fundamentals/module_four/raii",
    "course/fundamentals/module_four/ref_counting",
    "course/fundamentals/module_four/lifetimes",
    "course/fundamentals/module_four/traits",
    "course/fundamentals/module_four/generics",
    "course/fundamentals/module_four/iterators",
    "course/fundamentals/module_four/linked_list",
    "course/fundamentals/module_four/packing",
    "course/fundamentals/module_four/bytes",
    "course/fundamentals/five/rustamania",
    "course/fundamentals/five/shared_data",
    "course/fundamentals/five/collector",
]
