[package]
name = "a-tour-of-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "course/fundamentals/module/one/auth",
    "course/fundamentals/module/one/library",
    "course/fundamentals/module/one/login_manager",
    "course/fundamentals/module/one/text_input",
    "course/fundamentals/module/one/variables",
    "course/fundamentals/module/two/atomics_explored",
    "course/fundamentals/module/two/channels",
    "course/fundamentals/module/two/deadlock",
    "course/fundamentals/module/two/footgun",
    "course/fundamentals/module/two/hello_thread",
    "course/fundamentals/module/two/lock_free",
    "course/fundamentals/module/two/mutexes_explored",
    "course/fundamentals/module/two/rw_mutexes_explored",
    "course/fundamentals/module/two/scoped_thread",
    "course/fundamentals/module/two/thread_affinity",
    "course/fundamentals/module/two/thread_builder",
    "course/fundamentals/module/two/thread_park",
    "course/fundamentals/module/two/tprio",
    "course/fundamentals/module/two/threadpool",
    "course/fundamentals/module/two/workers",
    "course/fundamentals/module/two/workqueue",
    "course/fundamentals/module/two/rayon_iters",
    "course/fundamentals/module/two/rayon_scopes",
    "course/fundamentals/module/three/hello_async",
    "course/fundamentals/module/three/hello_tokio",
    "course/fundamentals/module/three/tokio_further",
    "course/fundamentals/module/three/blocking_tasks",
    "course/fundamentals/module/three/tokio_uts",
    "course/fundamentals/module/three/err_handling",
    "course/fundamentals/module/three/file_io",
    "course/fundamentals/module/three/network_io",
    "course/fundamentals/module/three/tcpserver",
    "course/fundamentals/module/three/async_chan",
    "course/fundamentals/module/three/tokio_shared_state",
    "course/fundamentals/module/three/tokio_select",
    "course/fundamentals/module/three/async_pinning",
    "course/fundamentals/module/three/tokio_tracing",
    "course/fundamentals/module/three/db",
    "course/fundamentals/module/three/tokio_axum",
    "course/fundamentals/module/three/thumbnail_service",
    "course/fundamentals/module/four/memory",
    "course/fundamentals/module/four/dropping",
    "course/fundamentals/module/four/raii",
    "course/fundamentals/module/four/ref_counting",
    "course/fundamentals/module/four/lifetimes",
    "course/fundamentals/module/four/traits",
    "course/fundamentals/module/four/generics",
    "course/fundamentals/module/four/iterators",
    "course/fundamentals/module/four/linked_list",
    "course/fundamentals/module/four/packing",
    "course/fundamentals/module/four/bytes",
    "course/fundamentals/module/five/shared_data",
    "course/fundamentals/module/five/collector",
    "course/fundamentals/module/five/server",
    "course/bonus/read_file",
    "course/bonus/file_adapt",
    "course/best-practices/format",
    "course/best-practices/docs",
    "course/best-practices/dependencies",
    "course/best-practices/license",
    "course/raas/http_srv",
    "course/raas/cfg_server",
    "course/raas/cfg_cli",
    "course/raas/grpc_server",
    "course/raas/grpc_stream",
]

[profile.release]
# shrink the binary
opt-level = "z"
# remove symbols
strip = true
# optimises crates
lto = true
# 
codegen-units = 1
# useful for IoT
panic = "abort"
# using rust nightly features
# rustup toolchain nightly
# rustup toolchain install nightly
# rustup component add rust-src --toolchain nightly
# rustc -vV
# cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-apple-darwin --release
