[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client.rs"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.96"
prost = "0.13.5"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"