[package]
name = "grpc_stream"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stream-server"
path = "src/server.rs"

[[bin]]
name = "stream-client"
path = "src/client.rs"

[dependencies]
prost = "0.13.5"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
