[package]
name = "http_srv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-full", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
