[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
shared_data = { path = "../shared_data" }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = "1.12.1"
