[package]
name = "network_io"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
derive = "1.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
